hover & gap fixed

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -56,7 +56,7 @@
     &::before {
       content: "";
       position: absolute;
-      left: -16px; 
+      left: -10px; 
       top: 50%;
       transform: translateY(-50%); 
       width: 6px;
