--- a/src/app/skills-section/skills-section.component.scss
+++ b/src/app/skills-section/skills-section.component.scss
@@ -3,6 +3,7 @@
   align-items: center; 
   justify-content: flex-start; 
   gap: 100px; 
+  margin: 100px auto;
   padding: 0 112px;
   width: 100%;
   max-width: 1440px; 
@@ -90,6 +91,7 @@
     }
   }
 }
+
 
 .skills-grid {
   flex: 1.5; 
